plugins {
  id 'java'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'maven-publish'
}

group = 'com.capstone'
version = '0.0.1-SNAPSHOT'

allprojects {
  repositories {
    mavenCentral()
    maven { url "https://repo.spring.io/milestone" }
  }

  dependencyManagement {
    imports {
      mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.0"
    }
  }
}

subprojects {
  apply plugin: 'java'
  apply plugin: 'io.spring.dependency-management'

  java {
    toolchain {
      languageVersion = JavaLanguageVersion.of(21)
    }
  }

  dependencies {
    // Common for all microservices
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.jspecify:jspecify:1.0.0'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
  }
}
